refac: use swag v2 and refactor parsing JSON
