# docs/swagger.json
@@ -1,210 +1,10 @@
 {
-    "swagger": "2.0",
-    "info": {
-        "description": "This is a sample server for Calculator API",
-        "title": "Calculator API",
-        "contact": {
-            "name": "Abdoulaye NDOYE",
-            "url": "https://github.com/NDOY3M4N",
-            "email": "pa.ndoye@outlook.com"
-        },
-        "license": {
-            "name": "MIT",
-            "url": "https://github.com/NDOY3M4N/calculator-api/blob/main/LICENSE"
-        },
-        "version": "1.0"
-    },
-    "host": "localhost:3000",
-    "basePath": "/api/v1",
-    "paths": {
-        "/add": {
-            "post": {
-                "description": "Add two numbers together",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Math"
-                ],
-                "summary": "Add two numbers",
-                "parameters": [
-                    {
-                        "description": "Numbers needed for the operation",
-                        "name": "payload",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/main.Payload"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.APISuccess"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/main.APIError"
-                        }
-                    }
-                }
-            }
-        },
-        "/divide": {
-            "post": {
-                "description": "Divide two numbers together",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Math"
-                ],
-                "summary": "Divide two numbers",
-                "parameters": [
-                    {
-                        "description": "Numbers needed for the operation",
-                        "name": "payload",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/main.Payload"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.APISuccess"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/main.APIError"
-                        }
-                    }
-                }
-            }
-        },
-        "/multiply": {
-            "post": {
-                "description": "Multiply two numbers together",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Math"
-                ],
-                "summary": "Multiply two numbers",
-                "parameters": [
-                    {
-                        "description": "Numbers needed for the operation",
-                        "name": "payload",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/main.Payload"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.APISuccess"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/main.APIError"
-                        }
-                    }
-                }
-            }
-        },
-        "/substract": {
-            "post": {
-                "description": "Substract two numbers together",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Math"
-                ],
-                "summary": "Substract two numbers",
-                "parameters": [
-                    {
-                        "description": "Numbers needed for the operation",
-                        "name": "payload",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/main.Payload"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.APISuccess"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/main.APIError"
-                        }
-                    }
-                }
-            }
-        }
-    },
-    "definitions": {
-        "main.APIError": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string"
-                }
-            }
-        },
-        "main.APISuccess": {
-            "type": "object",
-            "properties": {
-                "result": {
-                    "type": "integer"
-                }
-            }
-        },
-        "main.Payload": {
-            "type": "object",
-            "properties": {
-                "number1": {
-                    "type": "integer"
-                },
-                "number2": {
-                    "type": "integer"
-                }
-            }
-        }
-    }
+    "components": {"schemas":{"main.APIError":{"properties":{"error":{"type":"string"}},"type":"object"},"main.APISuccess":{"properties":{"result":{"type":"integer"}},"type":"object"},"main.Payload":{"properties":{"number1":{"example":6,"type":"integer"},"number2":{"example":9,"type":"integer"}},"type":"object"}}},
+    "info": {"contact":{"email":"pa.ndoye@outlook.com","name":"Abdoulaye NDOYE","url":"https://github.com/NDOY3M4N"},"description":"This is a simple server for Calculator API","license":{"name":"MIT","url":"https://github.com/NDOY3M4N/api-calculator/blob/main/LICENSE"},"title":"Calculator API","version":"1.0"},
+    "externalDocs": {"description":"","url":""},
+    "paths": {"/add":{"post":{"description":"Add two numbers together","requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/main.Payload"}}},"description":"Numbers needed for the operation","required":true},"responses":{"200":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/main.APISuccess"}}},"description":"OK"},"400":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/main.APIError"}}},"description":"Bad Request"}},"summary":"Add two numbers","tags":["Math"]}},"/divide":{"post":{"description":"Divide two numbers together","requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/main.Payload"}}},"description":"Numbers needed for the operation","required":true},"responses":{"200":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/main.APISuccess"}}},"description":"OK"},"400":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/main.APIError"}}},"description":"Bad Request"}},"summary":"Divide two numbers","tags":["Math"]}},"/multiply":{"post":{"description":"Multiply two numbers together","requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/main.Payload"}}},"description":"Numbers needed for the operation","required":true},"responses":{"200":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/main.APISuccess"}}},"description":"OK"},"400":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/main.APIError"}}},"description":"Bad Request"}},"summary":"Multiply two numbers","tags":["Math"]}},"/substract":{"post":{"description":"Substract two numbers together","requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/main.Payload"}}},"description":"Numbers needed for the operation","required":true},"responses":{"200":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/main.APISuccess"}}},"description":"OK"},"400":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/main.APIError"}}},"description":"Bad Request"}},"summary":"Substract two numbers","tags":["Math"]}},"/sum":{"post":{"description":"Add all numbers in an array","requestBody":{"content":{"application/json":{"schema":{"items":{"type":"integer"},"type":"array"}}},"description":"Array of numbers needed for the operation","required":true},"responses":{"200":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/main.APISuccess"}}},"description":"OK"},"400":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/main.APIError"}}},"description":"Bad Request"}},"summary":"Sum numbers","tags":["Math"]}}},
+    "openapi": "3.1.0",
+    "servers": [
+        {"description":"Development server","url":"http://localhost:3000/api/v1"}
+    ]
 }
