# handlers.go
@@ -2,12 +2,33 @@ package main
 
 import (
 	"encoding/json"
-	"io"
+	"errors"
 	"log/slog"
 	"net/http"
 )
 
-// addHandler Foo
+var (
+	ErrMissingBody  = errors.New("missing request body")
+	ErrDividyByZero = errors.New("division by zero is prohibited")
+	ErrLengthSum    = errors.New("provide at least 2 numbers")
+)
+
+type Payload struct {
+	Number1 int `json:"number1" example:"6"`
+	Number2 int `json:"number2" example:"9"`
+}
+
+type PayloadSum []int
+
+type APIError struct {
+	Error string `json:"error"`
+}
+
+type APISuccess struct {
+	Result int `json:"result"`
+}
+
+// Add two numbers
 //
 // @summary Add two numbers
 // @description Add two numbers together
@@ -19,16 +40,48 @@ import (
 // @failure 400 {object} APIError
 // @router /add [post]
 func addHandler(w http.ResponseWriter, r *http.Request) {
-	payload, err := parseJSON(r)
-	if err != nil {
-		writeJSON(w, http.StatusBadRequest, map[string]string{"error": err.Error()})
+	var payload Payload
+	if err := decodeJSON(r, &payload); err != nil {
+		writeError(w, http.StatusBadRequest, err)
 		return
 	}
 
-	writeJSON(w, http.StatusOK, map[string]int{"result": payload.Number1 + payload.Number2})
+	result := payload.Number1 + payload.Number2
+	writeSuccess(w, http.StatusOK, result)
 }
 
-// substractHandler Foo
+// Sum numbers
+//
+// @summary Sum numbers
+// @description Add all numbers in an array
+// @tags Math
+// @accept json
+// @produce json
+// @param payload body PayloadSum true "Array of numbers needed for the operation"
+// @success 200 {object} APISuccess
+// @failure 400 {object} APIError
+// @router /sum [post]
+func sumHandler(w http.ResponseWriter, r *http.Request) {
+	var payload PayloadSum
+	if err := decodeJSON(r, &payload); err != nil {
+		writeError(w, http.StatusBadRequest, err)
+		return
+	}
+
+	if len(payload) < 2 {
+		writeError(w, http.StatusBadRequest, ErrLengthSum)
+		return
+	}
+
+	var result int
+	for _, num := range payload {
+		result += num
+	}
+
+	writeSuccess(w, http.StatusOK, result)
+}
+
+// Substract two numbers
 //
 // @summary Substract two numbers
 // @description Substract two numbers together
@@ -40,16 +93,17 @@ func addHandler(w http.ResponseWriter, r *http.Request) {
 // @failure 400 {object} APIError
 // @router /substract [post]
 func substractHandler(w http.ResponseWriter, r *http.Request) {
-	payload, err := parseJSON(r)
-	if err != nil {
-		writeJSON(w, http.StatusBadRequest, map[string]string{"error": err.Error()})
+	var payload Payload
+	if err := decodeJSON(r, &payload); err != nil {
+		writeError(w, http.StatusBadRequest, err)
 		return
 	}
 
-	writeJSON(w, http.StatusOK, map[string]int{"result": payload.Number1 - payload.Number2})
+	result := payload.Number1 - payload.Number2
+	writeSuccess(w, http.StatusOK, result)
 }
 
-// multiplyHandler Foo
+// Multiply two numbers
 //
 // @summary Multiply two numbers
 // @description Multiply two numbers together
@@ -61,13 +115,14 @@ func substractHandler(w http.ResponseWriter, r *http.Request) {
 // @failure 400 {object} APIError
 // @router /multiply [post]
 func multiplyHandler(w http.ResponseWriter, r *http.Request) {
-	payload, err := parseJSON(r)
-	if err != nil {
-		writeJSON(w, http.StatusBadRequest, map[string]string{"error": err.Error()})
+	var payload Payload
+	if err := decodeJSON(r, &payload); err != nil {
+		writeError(w, http.StatusBadRequest, err)
 		return
 	}
 
-	writeJSON(w, http.StatusOK, map[string]int{"result": payload.Number1 * payload.Number2})
+	result := payload.Number1 * payload.Number2
+	encodeJSON(w, http.StatusOK, result)
 }
 
 // divideHandler Foo
@@ -82,9 +137,9 @@ func multiplyHandler(w http.ResponseWriter, r *http.Request) {
 // @failure 400 {object} APIError
 // @router /divide [post]
 func divideHandler(w http.ResponseWriter, r *http.Request) {
-	payload, err := parseJSON(r)
-	if err != nil {
-		writeJSON(w, http.StatusBadRequest, map[string]string{"error": err.Error()})
+	var payload Payload
+	if err := decodeJSON(r, &payload); err != nil {
+		writeError(w, http.StatusBadRequest, err)
 		return
 	}
 
@@ -95,31 +150,34 @@ func divideHandler(w http.ResponseWriter, r *http.Request) {
 			slog.String("method", r.Method),
 			slog.String("path", r.URL.Path),
 		)
-		writeJSON(w, http.StatusBadRequest, map[string]string{"error": "Division by zero"})
+
+		writeError(w, http.StatusBadRequest, ErrDividyByZero)
 		return
 	}
 
-	writeJSON(w, http.StatusOK, map[string]int{"result": payload.Number1 / payload.Number2})
+	result := payload.Number1 / payload.Number2
+	writeSuccess(w, http.StatusOK, result)
 }
 
-func parseJSON(r *http.Request) (Payload, error) {
-	var payload Payload
-	body, err := io.ReadAll(r.Body)
-	if err != nil {
-		return Payload{}, err
-	}
-	defer r.Body.Close()
-
-	if err := json.Unmarshal(body, &payload); err != nil {
-		return Payload{}, err
+func decodeJSON(r *http.Request, payload any) error {
+	if r.ContentLength == 0 {
+		return ErrMissingBody
 	}
 
-	return payload, nil
+	return json.NewDecoder(r.Body).Decode(payload)
 }
 
-func writeJSON(w http.ResponseWriter, status int, v any) error {
+func encodeJSON(w http.ResponseWriter, statusCode int, payload any) error {
 	w.Header().Add("Content-Type", "application/json")
-	w.WriteHeader(status)
+	w.WriteHeader(statusCode)
 
-	return json.NewEncoder(w).Encode(v)
+	return json.NewEncoder(w).Encode(payload)
+}
+
+func writeSuccess(w http.ResponseWriter, statusCode int, payload int) error {
+	return encodeJSON(w, statusCode, APISuccess{payload})
+}
+
+func writeError(w http.ResponseWriter, statusCode int, err error) error {
+	return encodeJSON(w, statusCode, APIError{err.Error()})
 }
